# LogiTrack

./: .dockerignore  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  docker-compose.yml  openapi.yaml  schema.sql  sonar-project.properties
.github/workflows/: sonarqube.yml
libs/config/: Cargo.toml
libs/config/src/: lettre.rs  lib.rs  postgres.rs  rabbitmq.rs  reqwest.rs
libs/errors/: Cargo.toml
libs/errors/src/: error.rs  http_integrations.rs  lib.rs
libs/observability/: Cargo.toml
libs/observability/src/: lib.rs
libs/use_case/biteship/: Cargo.toml
libs/use_case/biteship/src/: dto.rs  error.rs  lib.rs
libs/use_case/waha/: Cargo.toml
libs/use_case/waha/src/: dto.rs  error.rs  lib.rs
services/notification-service/: Cargo.toml
services/notification-service/src/: consumer.rs  domain.rs  handler.rs  main.rs
services/notification-service/src/ports/: email.rs  mod.rs  telegram.rs  whatsapp.rs
services/notification-service/templates/tracking_added/: chat.stub  email.mustache
services/notification-service/templates/tracking_status_updated/: chat.stub  email.mustache
services/polling-service/: Cargo.toml
services/polling-service/src/: domain.rs  main.rs  provider.rs  repository.rs  service.rs
services/tracking-service/: Cargo.toml
services/tracking-service/src/: app.rs  main.rs  routes.rs
services/tracking-service/src/handlers/: tracking.rs
services/tracking-service/src/models/: dto.rs  event.rs  mod.rs  notification.rs  shipment.rs  status.rs
services/tracking-service/src/repository/: mod.rs  shipment_repo.rs  shipment_status_mapping_repo.rs  shipment_subscription.rs  tracking_event_repo.rs
services/tracking-service/src/service/: mod.rs  tracking_service.rs
services/webhook-service/: Cargo.toml
services/webhook-service/src/: app.rs  errors.rs  main.rs  routes.rs
services/webhook-service/src/domain/: biteship.rs  event.rs  mod.rs  shipment.rs
services/webhook-service/src/handlers/: biteship_handler.rs  mod.rs
services/webhook-service/src/middlewares/: auth.rs
services/webhook-service/src/services/: biteship_service.rs  mod.rs
