[workspace]
members = [
    "services/*",
    "libs/*"
]
resolver = "2"

[workspace.dependencies]
tokio = {version = "1.48.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
axum = {version = "0.8"}
serde_json = "1.0"
uuid = {version = "1.19", features = ["v4"]}
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"]}