[workspace]
members = [
    "services/*",
    "libs/config",
    "libs/observability",
    "libs/use_case/biteship",
    "libs/errors"
    , "libs/use_case/waha"]
resolver = "2"

#[build]
#rustflags = ["-Aunused"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8" }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "=0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
dotenvy = "0.15"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
lapin = {version = "3.7"}
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
