[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
observability = { path = "../../libs/observability" }
tracing.workspace = true
config = { path = "../../libs/config" }
waha = { path = "../../libs/use_case/waha" }
async-trait.workspace = true
uuid.workspace = true
reqwest.workspace = true
lettre.workspace = true
futures-util = "0.3"
handlebars = "6.4"