[package]
name = "polling-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
lapin.workspace = true
async-trait.workspace = true
config = { path = "../../libs/config" }
observability = { path = "../../libs/observability" }
biteship = { path = "../../libs/use_case/biteship" }
