[package]
name = "tracking-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
sqlx = {workspace = true}
observability = {path = "../../libs/observability"}