[package]
name = "tracking-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
sqlx = {workspace = true}
observability = {path = "../../libs/observability"}
config = {path = "../../libs/config"}
errors = {path = "../../libs/errors", features = ["http-integrations"]}
biteship = {path = "../../libs/use_case/biteship"}
dotenvy.workspace = true
anyhow.workspace = true
async-trait.workspace = true